--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -12,11 +12,13 @@
 <p class="mb-4">{% blocktranslate count count=page_obj.paginator.count %}You are in one group{% plural %}You are in {{ count }} groups.{% endblocktranslate %}</p>
 
 {% if page_obj.paginator.count > 0 %}
-<ul class="px-5 mb-4 list-disc text-primary-accent">
-  {% for group in page_obj %}
-    <li><a class="block text-contain" href="{% url 'group' group.pk %}">{{ group.name }}</a></li>
-  {% endfor %}
-</ul>
+<div class="mb-4">
+  {% component "list" %}
+    {% for group in page_obj %}
+      <li><a class="block text-contain" href="{% url 'group' group.pk %}">{{ group.name }}</a></li>
+    {% endfor %}
+  {% endcomponent %}
+</div>
 
 {% component "page_pagination" page_obj=page_obj %}{% endcomponent %}
 {% endif %}
