--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -113,7 +113,7 @@
           </div>
           <ul class="flex justify-center my-4 text-xs divide-x divide-secondary-300">
             <li class="px-1"><a href="{% url 'static_rules' %}">Verhaltenskodex</a></li>
-            <li class="px-1"><a href="{% url 'static_privacy' %}">Datenschutz und Kontakt</a></li>
+            <li class="px-1"><a href="{% url 'static_privacy' %}">Kontakt und Datenschutz</a></li>
           </ul>
         </div>
       </div>
