--- a/static_pages/templates/static_pages/rules.html
+++ b/static_pages/templates/static_pages/rules.html
@@ -1,33 +1,36 @@
 {% extends "base.html" %}
 
+{% block head_title %}
+Verhaltenskodex
+{% endblock %}
+
 {% block headertitle %}
 Verhaltenskodex
 {% endblock %}
 
 {% block content %}
-<div class="grid grid-cols-10 gap-4 my-4 -mx-4">
-<div class="col-span-6 col-start-3 mixed-copy hyphens-auto">
+<div class="my-4 mixed-copy">
 
-<p>Vorwort: <a href="https://youtu.be/sWF03zRzLeE" target="_blank" rel="noopener noreferrer">Seid nicht dumm</a>.</p>
+<p>Damit du und alle anderen hier eine richtig gute Zeit haben, ist es wichtig, dass du dich an ein paar Regeln hältst. Die Regeln sollen nicht Spaß verderben, sondern echten Spaß ermöglichen und ein positives und angenehmes Miteinander fördern.</p>
 
 <h2>So ist es richtig:</h2>
 
-<ul class="px-4 space-y-1 list-disc">
+<ul class="space-y-1">
   <li>Bleibe immer höflich und freundlich.</li>
   <li>Vermeide schlechte Stimmung durch negative/umstrittene/verstörende Themen, das betrifft insbesondere Hass, Gewalt, Tod, Krankheit, Politik.</li>
-  <li>Vermeide ungewollte Überraschungen für andere durch bspw. Darstellungen von Nacktheit/Sexualität oder Gewalt. Hier gibt es keine Inhaltswarnungen, darum im Zweifelsfall lieber nicht hochladen.</li>
+  <li>Vermeide ungewollte Überraschungen für andere, beispielsweise durch Nudes oder Darstellungen von Gewalt. Hier gibt es keine Inhaltswarnungen, darum im Zweifelsfall lieber nicht hochladen.</li>
   <li>Lade nur Fotos hoch, falls alle abgebildeten Personen mit der Veröffentlichung einverstanden sind.</li>
   <li>Überlege dir genau, was du potenziell fremden Menschen von dir zeigen möchtest.</li>
 </ul>
 
 <h2>Darauf haben wir hier keinen Bock:</h2>
 
-<ul class="px-4 space-y-1 list-disc">
+<ul class="space-y-1">
   <li>In Deutschland illegale Inhalte.</li>
   <li>Diskussion, wenn Leute klarmachen, dass sie nicht kontaktiert werden wollen.</li>
   <li>Beleidigung, Belästigung, Eskalation, Stalking, Mobbing, Deadnaming/Misgendern, verletzendes Verhalten, respektloses Verhalten.</li>
   <li>Veröffentlichen und Weiterleiten von persönlichen Inhalten ohne Zustimmung des ursprünglichen Verfassers. Das betrifft insbesondere private Nachrichten, Fotos und Screenshots von Profilen.</li>
-  <li>Nazi-/Faschoscheiße, Verschwörungstheorien, Tech-/Coinbros, Arschlöcher.</li>
+  <li>Nazi-/Faschoscheiße, Verschwörungstheorien, Techbros, Coinbros, Arschlöcher.</li>
   <li>Spam, Kettenbriefe, kommerzielle Accounts und Werbung.</li>
   <li>Automatisierte Accounts, Bots.</li>
   <li>Crawling, Nutzung der Inhalte für maschinelles Lernen, sonstige automatisierte Verarbeitung.</li>
@@ -36,11 +39,10 @@ Verhaltenskodex
 
 <h2>So werden die Regeln durchgesetzt:</h2>
 
-<ul class="px-4 space-y-1 list-disc">
+<ul class="space-y-1">
   <li>Stört dich eine einzelne Person, kannst du diese blockieren oder die Freundschaft beenden.</li>
-  <li>Alternativ wende dich an vz@geheimorganisation.org und wir setzen die Regeln konsequent durch, beispielsweise durch Löschen der betroffenen Accounts.</li>
+  <li>Wende dich ansonsten an vz@geheimorganisation.org und wir setzen die Regeln konsequent durch, beispielsweise durch Löschen der betroffenen Accounts.</li>
 </ul>
 
-</div>
 </div>
 {% endblock %}
