--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -59,7 +59,7 @@
               <nav class="flex">
                 {% if request.user.is_authenticated %}
                   <a class="px-2 py-1 text-primary-content hover:text-primary-content hover:no-underline hover:bg-primary-100" href="{% url 'invite_code_list' %}">{% translate 'invite' %}</a>
-                  <a class="px-2 py-1 text-primary-content hover:text-primary-content hover:no-underline hover:bg-primary-100" href="">{% translate 'help' %}</a>
+                  <a class="px-2 py-1 text-primary-content hover:text-primary-content hover:no-underline hover:bg-primary-100" href="{% url 'static_help' %}">{% translate 'help' %}</a>
                   <form action="{% url 'account_logout' %}" method="POST">
                     {% csrf_token %}
                     <button type="submit" class="px-2 py-1 hover:bg-primary-100">{% translate 'get out' %}</button>
@@ -67,7 +67,7 @@
                 {% else %}
                   <a class="px-2 py-1 text-primary-content hover:text-primary-content hover:no-underline hover:bg-primary-100" href="{% url 'account_login' %}">einloggen</a>
                   <a class="px-2 py-1 text-primary-content hover:text-primary-content hover:no-underline hover:bg-primary-100" href="{% url 'account_signup' %}">hier anmelden</a>
-                  <a class="px-2 py-1 text-primary-content hover:text-primary-content hover:no-underline hover:bg-primary-100" href="">hilfe</a>
+                  <a class="px-2 py-1 text-primary-content hover:text-primary-content hover:no-underline hover:bg-primary-100" href="{% url 'static_help' %}">{% translate 'help' %}</a>
                 {% endif %}
               </nav>
             </div>
@@ -111,6 +111,10 @@
               <img src="{% static "core/chicklets/php.gif" %}" width="80" height="15" loading="lazy" alt="Powered by PHP" />
             </a>
           </div>
+          <ul class="flex justify-center my-4 text-xs divide-x divide-secondary-300">
+            <li class="px-1"><a href="{% url 'static_rules' %}">Verhaltenskodex</a></li>
+            <li class="px-1"><a href="{% url 'static_privacy' %}">Kontakt und Datenschutz</a></li>
+          </ul>
         </div>
       </div>
     </div>
