--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -10,7 +10,7 @@
 {% block content %}
 {% component "tabs" tabs=tabs / %}
 
-<form class="mb-4 form" method="post">
+<div class="mb-4">
   {% crispy form %}
-</form>
+</div>
 {% endblock %}
