--- a/my_account/templates/my_account/notificationsettings_form.html
+++ b/my_account/templates/my_account/notificationsettings_form.html
@@ -12,7 +12,7 @@
 
 <p class="my-4">{% translate 'Update your notification settings.' %}</p>
 
-<form class="my-4" method="post">
+<div class="my-4">
   {% crispy form %}
-</form>
+</div>
 {% endblock %}
