--- a/friends/templates/friends/friend_add.html
+++ b/friends/templates/friends/friend_add.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-<form class="my-4" method="post">
+<div class="my-4">
   {% crispy form %}
-</form>
+</div>
 {% endblock %}
