--- a/my_account/templates/my_account/appearance_form.html
+++ b/my_account/templates/my_account/appearance_form.html
@@ -14,7 +14,7 @@
   <p>{% blocktranslate %}Customise the page to match your style!{% endblocktranslate %}</p>
 </div>
 
-<form class="my-4" method="post">
+<div class="my-4">
   {% crispy form %}
-</form>
+</div>
 {% endblock %}
