--- a/private_messages/templates/private_messages/privatemessage_form.html
+++ b/private_messages/templates/private_messages/privatemessage_form.html
@@ -10,7 +10,7 @@
 {% block content %}
 {% component "tabs" tabs=tabs / %}
 
-<form class="my-8 form" method="post">
+<div class="my-8">
   {% crispy form %}
-</form>
+</div>
 {% endblock %}
