--- a/groups/templates/groups/includes/_column-last-update.html
+++ b/groups/templates/groups/includes/_column-last-update.html
@@ -1,3 +1,3 @@
-<a href="">{{ updated_by.display_name }}</a>
+<a href="{% url 'profile' updated_by.id %}">{{ updated_by.display_name }}</a>
 <br />
 {{ updated_at }}
